--- a/dev/basic_examples/index.html
+++ b/dev/basic_examples/index.html
@@ -7,8 +7,8 @@ dataA = rand(Bernoulli(0.15), n)
 dataB = rand(Bernoulli(0.16), n)
 
 # Define the models
-modelA = BernoulliModel(1, 1)
-modelB = BernoulliModel(1, 1)
+modelA = ConjugateBernoulli(1, 1)
+modelB = ConjugateBernoulli(1, 1)
 
 # Choose the stopping rule that we will use for making decision
 stoppingrule = ExpectedLossThresh(0.0002)
@@ -24,10 +24,10 @@ statsB = BernoulliStatistics(dataB)
 update!(experiment, [statsA, statsB])
 
 # Calculate the metric (expected loss in this case) of each model 
-winner_index, expected_losses = calculatemetrics(experiment)
+winner_index, expected_losses = metrics(experiment)
 
 # Or, we can directly find the winning model in the experiment 
-winner = selectwinner!(experiment)</code></pre><h2 id="Example:-Three-Models"><a class="docs-heading-anchor" href="#Example:-Three-Models">Example: Three Models</a><a id="Example:-Three-Models-1"></a><a class="docs-heading-anchor-permalink" href="#Example:-Three-Models" title="Permalink"></a></h2><p>Similar to the two models cases, but now we have three models.</p><pre><code class="language-julia">using BayesianExperiments
+winner = decide!(experiment)</code></pre><h2 id="Example:-Three-Models"><a class="docs-heading-anchor" href="#Example:-Three-Models">Example: Three Models</a><a id="Example:-Three-Models-1"></a><a class="docs-heading-anchor-permalink" href="#Example:-Three-Models" title="Permalink"></a></h2><p>Similar to the two models cases, but now we have three models.</p><pre><code class="language-julia">using BayesianExperiments
 
 # Generate sample data
 n = 1000
@@ -36,9 +36,9 @@ dataB = rand(Bernoulli(0.145), n)
 dataC = rand(Bernoulli(0.152), n)
 
 # Define the models
-modelA = BernoulliModel(1, 1)
-modelB = BernoulliModel(1, 1)
-modelC = BernoulliModel(1, 1)
+modelA = ConjugateBernoulli(1, 1)
+modelB = ConjugateBernoulli(1, 1)
+modelC = ConjugateBernoulli(1, 1)
 
 # Choose the stopping rule
 stoppingrule = ProbabilityBeatAllThresh(0.99)
@@ -55,10 +55,10 @@ statsC = BernoulliStatistics(dataC)
 update!(experiment, [statsA, statsB, statsC])
 
 # Calculate the metric (expected loss in this case) of each model 
-winner_index, expected_losses = calculatemetrics(experiment)
+winner_index, expected_losses = metrics(experiment)
 
 # Or, we can directly find the winning model in the experiment 
-winner = selectwinner!(experiment)</code></pre><h2 id="Example:-Chained-Models"><a class="docs-heading-anchor" href="#Example:-Chained-Models">Example: Chained Models</a><a id="Example:-Chained-Models-1"></a><a class="docs-heading-anchor-permalink" href="#Example:-Chained-Models" title="Permalink"></a></h2><p>We have a chained model with BernoulliModel and LogNormalModel. A common use case is when we want to use revenue per visitor as the metric. We need to model distributions of both the conversion rate and revenue.  </p><pre><code class="language-julia">using BayesianExperiments
+winner = decide!(experiment)</code></pre><h2 id="Example:-Chained-Models"><a class="docs-heading-anchor" href="#Example:-Chained-Models">Example: Chained Models</a><a id="Example:-Chained-Models-1"></a><a class="docs-heading-anchor-permalink" href="#Example:-Chained-Models" title="Permalink"></a></h2><p>We have a chained model with ConjugateBernoulli and ConjugateLogNormal. A common use case is when we want to use revenue per visitor as the metric. We need to model distributions of both the conversion rate and revenue.  </p><pre><code class="language-julia">using BayesianExperiments
 
 # Generate sample data
 n = 1000
@@ -75,12 +75,12 @@ statsB2 = LogNormalStatistics(dataB2)
 
 # Setup the experiment
 modelA = ChainedModel(
-    [BernoulliModel(1, 1), LogNormalModel(0.0, 1.0, 0.001, 0.001)],
-    [ChainOperator.multiply]
+    [ConjugateBernoulli(1, 1), ConjugateLogNormal(0.0, 1.0, 0.001, 0.001)],
+    [op_multiply]
 )
 modelB = ChainedModel(
-    [BernoulliModel(1, 1), LogNormalModel(0.0, 1.0, 0.001, 0.001)],
-    [ChainOperator.multiply]
+    [ConjugateBernoulli(1, 1), ConjugateLogNormal(0.0, 1.0, 0.001, 0.001)],
+    [op_multiply]
 )
 
 # Choose the stopping rule
@@ -93,10 +93,10 @@ experiment = ExperimentAB([modelA, modelB], stoppingrule)
 update!(experiment, [[statsA1, statsA2], [statsB1, statsB2]])
 
 # Calculate the metric (expected loss in this case) of each model 
-winner_index, expected_losses = calculatemetrics(experiment)
+winner_index, expected_losses = metrics(experiment)
 
 # Or, we can directly find the winning model in the experiment 
-winner = selectwinner!(experiment))</code></pre><h2 id="Example:-Power-Analysis"><a class="docs-heading-anchor" href="#Example:-Power-Analysis">Example: Power Analysis</a><a id="Example:-Power-Analysis-1"></a><a class="docs-heading-anchor-permalink" href="#Example:-Power-Analysis" title="Permalink"></a></h2><pre><code class="language-julia"># Choose the underlying data generating distributions
+winner = decide!(experiment))</code></pre><h2 id="Example:-Power-Analysis"><a class="docs-heading-anchor" href="#Example:-Power-Analysis">Example: Power Analysis</a><a id="Example:-Power-Analysis-1"></a><a class="docs-heading-anchor-permalink" href="#Example:-Power-Analysis" title="Permalink"></a></h2><pre><code class="language-julia"># Choose the underlying data generating distributions
 datagendists = [Bernoulli(0.2), Bernoulli(0.25)]
 
 # Choose the parameters of the simulation
@@ -111,8 +111,8 @@ maxsteps = 30
 minsteps = 5
 
 # Setup the experiment with models and stopping rule
-modelA = BernoulliModel(1, 1)
-modelB = BernoulliModel(1, 1)
+modelA = ConjugateBernoulli(1, 1)
+modelB = ConjugateBernoulli(1, 1)
 stoppingrule = ProbabilityBeatAllThresh(0.99)
 experiment = ExperimentAB([modelA, modelB], stoppingrule)
 
@@ -130,4 +130,4 @@ numsteps, winners, _ = runsequential(
     simulation, numsamples=1000, numsims=50)
 
 # Calculate the number of winning times for model B (&quot;variant 1&quot;)
-sum(winners .== &quot;variant 1&quot;) ==  2 </code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../api/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Friday 12 March 2021 01:21">Friday 12 March 2021</span>. Using Julia version 1.5.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+sum(winners .== &quot;variant 1&quot;) ==  2 </code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../api/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Wednesday 17 March 2021 23:52">Wednesday 17 March 2021</span>. Using Julia version 1.5.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
